# algofer

./: README.md  docker-compose.dev.yml
client/: .env.example  Dockerfile.dev  package-lock.json  package.json
client/app/: globals.css  page.tsx
client/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
client/src/app/actions/: submitCode.ts  submitCodeOOP.ts
client/src/app/demo/: page.tsx
client/src/app/oop/demo/: page.tsx
client/src/components/: Button.tsx  Category.tsx  CodeResultSection.tsx  SessionLoader.tsx
client/src/components/demo/: CodeRunner.tsx  Content.tsx
client/src/lib/: enums.ts
server/: .env.example  .gitignore  Dockerfile.dev  pom.xml
server-go/: Dockerfile.dev  README.md  go.mod  go.sum  main.go
server-go/compiler/: Dockerfile  Solution.java
server/asp-runner/cpp/: CMakeLists.txt  test
server/asp-runner/cpp/utils/: join_array_test.cc  split_array.h
server/asp-runner/exec/: Dockerfile
server/oop-runner/: Dockerfile
server/oop-runner/src/: Solution.java
server/runner/cpp/: CMakeLists.txt  Dockerfile  _temp_mylist.h  demo.cc  hello_world.cc  join_array.h  list_element.h  mylist.h  splitArray.cc  split_array.cc  split_array.h  split_array_test.cc
server/runner/cpp/utils/: join_array.cc  join_array.h  split_array.cc
server/src/main/java/com/hr/fer/algofer/: AlgoferApplication.java  CorsConfiguration.java  DockerRunner.java  DockerRunnerOOP.java  GreetingController.java
server/src/main/resources/: application.properties
server/src/test/resources/code/utils/: copy.test.properties
(+11 files in other folders)
